--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "ffmpeg": "^0.0.4",
     "ffmpeg-static": "^4.4.0",
     "g-i-s": "^2.1.6",
+    "genius-lyrics": "^4.2.9",
+    "genius-lyrics-api": "^3.2.0",
+    "genius-lyrics-fetcher": "^2.1.0",
     "image-search-engine": "^1.2.0",
     "jimp": "^0.16.1",
     "libsodium-wrappers": "^0.7.9",
